--- a/Day 2/RegistrationPage.html
+++ b/Day 2/RegistrationPage.html
@@ -21,7 +21,7 @@
       value="Register"
     />
     <ul>
-      <a href="http://127.0.0.1:5500/Resume.html ">Resume</a>
+      <a href="http://127.0.0.1:5500/Day%202/Resume.html">Resume</a>
     </ul>
   </body>
 </html>
