--- a/Day 3/ResumeNew.html
+++ b/Day 3/ResumeNew.html
@@ -7,12 +7,17 @@
     <title>NewResume</title>
   </head>
   <body>
-    <div
-      style="display: flex; justify-content: flex-star; background-color: black"
-    >
+    <div style="display: flex; background-color: black">
       <img
         src="DSC_0860 copy.jpg"
-        style="height: 200px; width: 200px; border-radius: 50%"
+        style="
+          height: 200px;
+          width: 200px;
+          border-radius: 70%;
+          margin: 20px;
+          display: flex;
+          flex-wrap: wrap;
+        "
       />
       <ul
         style="
