--- a/Day 2/Resume.html
+++ b/Day 2/Resume.html
@@ -120,7 +120,7 @@
     </ul>
 
     <ul>
-      <a href="http://127.0.0.1:5500/RegistrationPage.html"
+      <a href="http://127.0.0.1:5500/Day%202/RegistrationPage.html"
         >Registration Page</a
       >
     </ul>
