--- a/Day 4/Hello.html
+++ b/Day 4/Hello.html
@@ -11,7 +11,7 @@
   <body>
     <div
       style="
-        font-size: larger;
+        font-size: large;
         height: 100vh;
         display: flex;
         flex-direction: column;
