--- a/Day 3/ResumeNew.html
+++ b/Day 3/ResumeNew.html
@@ -5,7 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NewResume</title>
+
+    <style>
+      .style1 {
+        height: 300px;
+        width: 300px;
+        margin: 5%;
+      }
+    </style>
   </head>
+
   <body>
     <div style="display: flex; background-color: black">
       <img
@@ -28,7 +37,7 @@
           height: 200px;
         "
       >
-        <h1 style="margin-bottom: 0%">HARSH CHAUDHARI</h1>
+        <h1 style="margin-bottom: 0%"><i>HARSH CHAUDHARI</i></h1>
         <li><b>Email : </b>harshkc17@gmail.com</li>
         <li><b>Contact no. : </b>7410779343</li>
         <li>
@@ -50,7 +59,7 @@
       Objective
       <hr style="height: 2px; background-color: black" />
     </h2>
-    <p style="font-size: larger">
+    <p style="font-size: larger; text-decoration: underline">
       To work for an organization which would help me explore and realize my
       potential in a challenging and creative environment.
     </p>
