--- a/Day 3/googlehomepage.html
+++ b/Day 3/googlehomepage.html
@@ -23,6 +23,7 @@
           align-items: center;
           font-size: 5rem;
           font-weight: bold;
+          font-family: sans-serif;
         "
       >
         <span style="color: rgb(66, 133, 244)">G</span>
